# fetch_mediawiki_configuration

./: Cargo.toml  README.md
src/: extract.rs  generate.rs  main.rs  pcre.rs  siteinfo.rs
src/api/: mod.rs  response.rs
src/extract/: mod.rs  pcre.rs
src/siteinfo/: mod.rs  response.rs
