[package]
description = "Generate `parse_wiki_text` configuration code for a MediaWiki wiki"
edition = "2018"
name = "fetch_mediawiki_configuration"
version = "0.1.0"

[dependencies.clap]
default-features = false
version = "~2.33.3"

[dependencies.log]
features = ["max_level_trace", "release_max_level_info"]
version = "0.4"

[dependencies.simplelog]
version = "0.10"
