[package]
authors = ["Bence Kalmar <bkalmar1996@gmail.com>"]
description = "Generate `parse_wiki_text` configuration code for a MediaWiki wiki"
edition = "2018"
license = "MIT"
name = "fetch_mediawiki_configuration"
repository = "https://github.com/brkalmar/fetch_mediawiki_configuration"
version = "0.1.1"

[dependencies.clap]
default-features = false
version = "~2.33.3"

[dependencies.err-derive]
version = "0.3"

[dependencies.itertools]
version = "0.10"

[dependencies.log]
features = ["max_level_trace", "release_max_level_info"]
version = "0.4"

[dependencies.quote]
version = "1"

[dependencies.regex-syntax]
default-features = false
version = "0.6"

[dependencies.reqwest]
features = ["blocking", "deflate", "gzip", "json"]
version = "0.11"

[dependencies.serde]
features = ["derive"]
version = "1"

[dependencies.serde_json]
features = ["raw_value"]
version = "1"

[dependencies.simplelog]
version = "0.10"

[dependencies.url]
version = "2"
